<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="plus">+</string>
    <string name="star">*</string>
    <string name="division">/</string>
    <string name="equal">=</string>
    <string name="subtraction">-</string>
    <string name="c">C</string>
    <string name="zeri">0</string>
    <string name="zero">0</string>
    <string name="operating0">+/-</string>
    <string name="Negativeparentheses">+/-</string>
    <string name="NegativeParentheses">+/=</string>
    <string name="DecimalPoint">,</string>
    <string name="minus">-</string>
    <string name="Multiplication">*</string>
    <string name="Multiplicationsign">×</string>
    <string name="divisionsign">÷</string>
    <string name="Clear">C</string>
    <string name="parentheses">()</string>
    <string name="parenthese">( )</string>
    <string name="Precent">%</string>
    <string name="textview">TextView</string>
</resources>